[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tvtuner"]

[project]
name = "tvtuner"
version = "0.0.1"
authors = [
  { name="Daniel Gibbons", email="daniel.gibbons@dewc.com" },
]
description = "A PyTorch differentiable RF simulation environment"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "torchvision",
    "pycocotools",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "pydantic",
    "uvicorn",
]

data = [
    "kaggle",
]

dev = [
    "black",
    "black[jupyter]",
    "coverage",
    "lefthook",
    "mypy",
    "nbqa",
    "pre-commit",
    "pytest",
    "ruff",
    "tvtuner[api]",
    "tvtuner[data]",
]

[project.urls]
"Homepage" = "https://github.com/dewcservices/tvtuner"
"Bug Tracker" = "https://github.com/dewcservices/tvtuner/issues"

[tool.mypy]
disable_error_code = ["call-overload"]

[tool.ruff]
exclude = [
    "examples/penn_fudan",
    "torchvision",
]

lint.select = ["ALL"]

lint.ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "D100",
    "D103",
    "D104",
    "D105",
    "D211",
    "D213",
    "D407",
    "E501",
    "G004",
    "INP001",
    "PGH003",
    "PLR0913",
    "T201",
    "T203",
    "TCH001",
    "TCH002",
    "TCH003",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,examples}/*" = ["S101"]
